--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "phalapi", "phalapi-woocommerce", "woocommerce"
     ],
     "license": "GPL-3.0+",
+	"minimum-stability": "dev",
     "homepage": "https://www.phalapi.net/",
     "authors": [
         {
