--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,25 @@
 {
-    "name": "vivlong/phalapi-woocommerce",
-    "description": "PhalApi 2.x扩展类库，操作WooCommerce。",
-    "type": "library",
-    "keywords": [
-        "phalapi", "phalapi-woocommerce", "woocommerce"
-    ],
-    "license": "MulanPSL v2",
-	"minimum-stability": "dev",
-    "homepage": "https://www.phalapi.net/",
-    "authors": [
-        {
-            "name": "JamesLiao",
-            "email": "vivlonglz@gmail.com",
-            "homepage": "https://github.com/vivlong",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "automattic/woocommerce": "dev-master"
-    },
-    "autoload": {
-        "psr-4": {
-            "PhalApi\\Woocommerce\\": "src"
-        }
-    }
+	"name": "vivlong/phalapi-woocommerce",
+	"description": "PhalApi 2.x扩展类库，操作WooCommerce。",
+	"type": "library",
+	"keywords": [
+		"phalapi", "phalapi-woocommerce", "woocommerce"
+	],
+	"license": "MulanPSL-2.0",
+	"homepage": "https://www.phalapi.net/",
+	"authors": [{
+		"name": "vivlong",
+		"email": "vivlonglz@gmail.com",
+		"homepage": "http://vivlong.github.io",
+		"role": "Developer"
+	}],
+	"require": {
+		"php": ">=7.0.0",
+		"automattic/woocommerce": "dev-master"
+	},
+	"autoload": {
+		"psr-4": {
+			"PhalApi\\Woocommerce\\": "src"
+		}
+	}
 }
