--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 		"phalapi", "phalapi-woocommerce", "woocommerce"
 	],
 	"license": "MulanPSL-2.0",
-	"minimum-stability": "stable",
+	"minimum-stability": "dev",
 	"homepage": "https://www.phalapi.net/",
 	"authors": [{
 		"name": "vivlong",
